assets/css/style.scss
---
---

@import "{{ site.theme }}";
sup {
    font-size: 65%;
    vertical-align: super;
    font-weight: bold;
}
h2 {
    font-size: 20px;
}
img {
    max-width: 640px;
}

div.top_nav {
    background: linear-gradient(to bottom, #929292,#969696);
    top: 0;
    font: inherit;
    position: -webkit-sticky; /* Safari */
    position: sticky;
    z-index: 3;
    height: 50px;
}

ul.top_nav{
    list-style-type: none;
    max-width: 640px;
    margin: 0 auto;
    height: 50px;
}

#main_content_wrap {
    border-top: none;
}

li.top_nav {
  float: left;
}

li.top_nav a {
  display: block;
  color: white;
  text-align: center;
  padding: 10px 25px 10px 25px;
  vertical-align: baseline;
  text-decoration: none;
  font-size: 20px;
}

li.top_nav a:hover {
  text-decoration: none;
  background-color: #373737;
  color: white;
}

table {
  border: none;
  border-collapse:collapse;
}

td {
  border-style : hidden!important;
  margin: 0px 25px;
  padding: 0px;
}

th {
  background: #f2f2f2;
}

th:empty {
  visibility: hidden;
  display: none;
}

html {
  scroll-padding-top: 70px; /* height of sticky header */
}

.site-nav {
  color: white;
  margin-top: 1rem;
}

.site-nav a {
  color: white;
  margin-right: 1rem;
}

li.language-switch {
  float: left;
}

li.language-switch a {
  margin-left: 1.5rem;
  display: block;
  color: white;
  text-align: center;
  padding: 10px 25px 10px 25px;
  vertical-align: baseline;
  text-decoration: none;
  font-size: 20px;
}

.language-switch a:hover {
  text-decoration: none;
  background-color: #373737;
  color: white;
}

@media screen and (max-width: 992px) {
 html,
  body {
    background: #f2f2f2;
  }

  #main_content_wrap {
    background: #f2f2f2;
  }

  img {
    max-width: 100%;
    height: auto;
  }

  div.top_nav {
    display: block;
    height: auto;
    min-height: 50px;
  }

  ul.top_nav {
    max-width: 100%;
    height: auto;
    margin: 0;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
  }

  li.top_nav,
  li.language-switch {
    float: none;
  }

  li.top_nav a,
  li.language-switch a {
    font-size: 16px;
    padding: 10px 12px;
    margin: 0;
  }
}

